Corrected login and register components and backend logic